# android-examples

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ObjectiveCTest.h  ObjectiveCTest.mm
app/src/main/java/com/algoriddim/androidgnusteptest/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/algoriddim/androidgnusteptest/: ExampleUnitTest.java
hello-objective-qt/: CMakeLists.txt  GSInitialize.mm  ObjC.h  ObjC.m  ObjCXX.mm  gnustep-android.cmake  hello-objective-qt.pro  main.cpp  main.qml  objc-apple.pri  objc-gnustep.cmake  objc-gnustep.pri  objc.pri
hello-objectivec/: build.gradle
hello-objectivec/app/: build.gradle
hello-objectivec/app/src/androidTest/java/com/algoriddim/androidgnusteptest/: ExampleInstrumentedTest.java
hello-objectivec/app/src/main/assets/: Info.plist
hello-objectivec/app/src/main/assets/Subfolder/: Array.plist
hello-objectivec/app/src/main/assets/en.lproj/: Localizable.strings
hello-objectivec/app/src/main/cpp/: CMakeLists.txt  GSInitialize.m  ObjC.h  ObjC.m  ObjCXX.h  ObjCXX.mm  ObjectiveCTest.h  ObjectiveCTest.mm  native-lib.cpp
hello-objectivec/app/src/main/java/com/algoriddim/androidgnusteptest/: MainActivity.java
hello-objectivec/app/src/main/res/layout/: activity_main.xml
hello-objectivec/gradle/wrapper/: gradle-wrapper.properties
